<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeGameActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/principal_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="44dp"
        android:text="@string/lbl_welcome"
        app:layout_constraintStart_toEndOf="@+id/image_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_initial_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="64dp"
        android:text="@string/lbl_question_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <Button
        android:id="@+id/btn_fast_mode"
        android:layout_width="153dp"
        android:layout_height="102dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="72dp"
        android:text="@string/btn_fast_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_initial_question" />

    <Button
        android:id="@+id/btn_categories_mode"
        android:layout_width="155dp"
        android:layout_height="114dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fast_mode" />
</androidx.constraintlayout.widget.ConstraintLayout>